# ark_v1

./: .gitignore  README.md  pyproject.toml
ark_v1/: __init__.py  agent.py  ark_v1.py  chat_prompt_templates.py  utils.py
ark_v1/data_models/: agent_models.py  graph_models.py  query_models.py
ark_v1/graph/: graph_interface.py  local_graph.py
examples/: example_data.json  minimal_ollama.py
